# orrchestrator

./: .gitattributes  .gitignore  .ignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  HANDOFF.md  LICENSE  ORRBEAM_FEEDBACK  PLAN.md  README.md  \  agents.md  fb2p.md  instructions_inbox.md  redesign_plan  v2_user_design.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.playwright-mcp/: page-2026-04-28T02-50-38-485Z.yml  page-2026-04-28T02-50-58-539Z.yml  page-2026-04-28T02-54-44-473Z.yml  page-2026-04-28T02-59-14-804Z.yml  page-2026-04-28T02-59-30-695Z.yml
agent/: orrch-agent.sh  orrch-autocommit.sh
agents/: beta_tester.md  chief_operations_officer.md  copyright_investigator.md  developer.md  executive_assistant.md  feature_tester.md  hypervisor.md  intelligence_resources_manager.md  licensing_auditor.md  market_researcher.md  mentor.md  penetration_tester.md  project_manager.md  repository_manager.md  researcher.md  resource_optimizer.md  software_engineer.md  specialist.md  talent_scout.md  ui_designer.md  ux_specialist.md
branding/: BRAND.md
config/: tmux.conf
crates/orrch-agents/: Cargo.toml
crates/orrch-agents/src/: department.rs  lib.rs  profile.rs  runner.rs
crates/orrch-core/: Cargo.toml
crates/orrch-core/src/: agent.rs  audit.rs  backend.rs  compliance.rs  config.rs  diff_log.rs  feedback.rs  git.rs  intake_review.rs  lib.rs  output_parser.rs  pi_rpc.rs  plan_parser.rs  process_manager.rs  project.rs  provider.rs  release.rs  remote.rs  session.rs  session_brief.rs  session_log.rs  usage.rs  vault.rs  windows.rs  workflow_status.rs
crates/orrch-library/: Cargo.toml
crates/orrch-library/src/: harness.rs  item.rs  lib.rs  mcp.rs  model.rs  pi_ext.rs  store.rs  sync.rs  templates.rs
crates/orrch-mcp/: Cargo.toml
crates/orrch-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/orrch-retrospect/: Cargo.toml
crates/orrch-retrospect/src/: analyzer.rs  error_parser.rs  fingerprint.rs  lib.rs  protocol.rs  store.rs  tracker.rs
crates/orrch-tui/: Cargo.toml
crates/orrch-tui/src/: ansi.rs  app.rs  brand.rs  dashboard.rs  editor.rs  egui_window.rs  lib.rs  markdown.rs  markdown_image.rs  ui.rs
crates/orrch-webedit/: Cargo.toml
crates/orrch-webedit/assets/: app.js  index.html  style.css
crates/orrch-webedit/src/: api.rs  assets.rs  lib.rs  server.rs
crates/orrch-webui/: Cargo.toml
crates/orrch-webui/examples/: swipe_smoke.rs
crates/orrch-webui/src/: assets.rs  lib.rs  pty.rs  server.rs  shell.rs  state.rs  tee.rs
crates/orrch-webui/static/: index.html  terminal.html  ui.html
crates/orrch-webui/static/css/: main.css
crates/orrch-webui/static/js/: intentions.js  layout.js  mobile.js  sessions.js  shell.js  ws.js
crates/orrch-webui/tests/: auth_and_tls.rs  swipe_terminal.rs
crates/orrch-workforce/: Cargo.toml
crates/orrch-workforce/src/: engine.rs  lib.rs  operation.rs  parser.rs  template.rs
docs/: publish-plan.md  ux-audit-2026-04-22.md
docs/superpowers/plans/: 2026-04-17-webui.md
docs/superpowers/specs/: 2026-04-17-webui-design.md  2026-04-24-new-workflows-bugreport-assessdev-design.md
operations/: assess_development.md  develop_feature.md  idea_intake.md  instruction_intake.md  intake_bugreport.md  knowledge_intake.md  plan_intake.md  platform_port.md
plans/: 2026-04-16-00-47.md  2026-04-16-03-15.md  2026-04-18-20-32.md  2026-04-20-12-34.md  2026-04-21-00-14.md  2026-04-21-01-59.md  2026-04-21-03-41.md  2026-04-21-03-43.md  2026-04-21-03-52.md  2026-04-21-04-12.md  2026-04-22-01-27.md  2026-04-22-22-25.md  2026-04-23-20-34.md  2026-04-23-21-11.md  2026-04-23-21-40.md  2026-04-24-20-16.md  2026-04-24-21-08.md  2026-04-25-01-15.md  2026-04-27-07-00.md  2026-04-27-23-27.md  2026-04-30-07-05.md  2026-04-30-23-02.md  2026-05-01-08-11.md  2026-05-02-01-19.md  2026-05-06-03-57.md
plans/.pipeline/: 2026-04-16-00-47.md.json  2026-04-16-03-15.md.json  2026-04-18-20-32.md.json  2026-04-20-12-34.md.json  2026-04-21-00-14.md.json  2026-04-21-01-59.md.json  2026-04-21-03-52.md.json  2026-04-21-04-12.md.json  2026-04-22-01-27.md.json  2026-04-22-22-25.md.json  2026-04-23-20-34.md.json  2026-04-23-21-11.md.json  2026-04-23-21-40.md.json  2026-04-24-09-03.md.json  2026-04-24-20-16.md.json  2026-04-24-21-08.md.json  2026-04-25-01-15.md.json  2026-04-27-07-00.md.json  2026-04-27-23-27.md.json  2026-04-30-01-18.md.json  widget-position-optimizer.md.json
plans/.pipeline/2026-04-18-20-32/: intake_review.json  workflow.json
plans/.pipeline/2026-04-20-12-34/: review.json  workflow.json
plans/.pipeline/2026-04-21-00-14/: review.json  workflow.json
plans/.pipeline/2026-04-21-01-59/: review.json  review.json.rejected  workflow.json
plans/.pipeline/2026-04-21-03-52/: review.json  workflow.json
plans/.pipeline/2026-04-21-04-12/: review.json  workflow.json
plans/.pipeline/2026-04-22-01-27/: review.json  workflow.json
plans/.pipeline/2026-04-22-22-25/: intake_review.json  workflow.json
plans/.pipeline/2026-04-23-20-34/: review.json  routing.md  workflow.json
plans/.pipeline/2026-04-23-21-11/: review.json  workflow.json
plans/.pipeline/2026-04-23-21-40/: review.json  workflow.json
plans/.pipeline/2026-04-24-09-03/: review.json  workflow.json
plans/.pipeline/2026-04-24-20-16/: review.json  workflow.json
plans/.pipeline/2026-04-24-21-08/: review.json  workflow.json
plans/.pipeline/2026-04-25-01-15/: review.json  workflow.json
plans/.pipeline/2026-04-27-07-00/: review.json  workflow.json
plans/.pipeline/2026-04-27-23-27/: review.json  workflow.json
plans/.pipeline/widget-position-optimizer/: review.json  workflow.json
python-prototype/: pyproject.toml
python-prototype/orrchestrator/: app.py  process_manager.py  retrospect.py  terminal_widget.py
src/: Cargo.toml
src/src/: main.rs
workforces/: commercial_software_development.md  enterprise_tier.md  general_software_development.md  local_tier.md  mid_tier.md  new_workforce_1776303516.md  personal_tech_support.md
(+6 files in other folders)
