[workspace]
resolver = "2"
members = [
    "crates/orrch-core",
    "crates/orrch-retrospect",
    "crates/orrch-tui",
    "src",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
regex = "1"
sha2 = "0.10"
libc = "0.2"
nix = { version = "0.31", features = ["process", "signal", "term", "fs", "ioctl"] }
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
