[project]
name = "orrchestrator"
version = "0.1.0"
description = "AI development pipeline hypervisor — manage parallel Claude Code instances from a terminal UI"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
    "pyte>=0.8",
]

[project.scripts]
orrchestrator = "orrchestrator.app:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
