[package]
name = "orrch-core"
description = "Process manager and session handling for orrchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
libc.workspace = true
sha2.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
