[package]
name = "orrch-mcp"
description = "MCP server exposing orrchestrator capabilities over stdio"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orrch-mcp-server"
path = "src/main.rs"

[dependencies]
orrch-agents = { path = "../orrch-agents" }
orrch-workforce = { path = "../orrch-workforce" }
orrch-core = { path = "../orrch-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
