[package]
name = "orrch-retrospect"
description = "Error capture, fingerprinting, and troubleshooting protocol engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
