[package]
name = "orrch-tui"
description = "Terminal UI for orrchestrator dashboard and session focus"
version.workspace = true
edition.workspace = true

[features]
# Optional egui window for the node editor / non-TUI mode scaffolding
# (PLAN items 38 / 39). Off by default — TUI remains the canonical UI.
default = []
egui-window = ["dep:eframe", "dep:egui"]

[dependencies]
orrch-core = { path = "../orrch-core" }
orrch-workforce = { path = "../orrch-workforce" }
orrch-library = { path = "../orrch-library" }
orrch-retrospect = { path = "../orrch-retrospect" }
orrch-webedit = { path = "../orrch-webedit" }
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
anyhow.workspace = true
arboard.workspace = true
libc.workspace = true
pulldown-cmark.workspace = true

# Optional — only compiled when the `egui-window` feature is enabled.
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"], optional = true }

[dev-dependencies]
tempfile = "3"
