[package]
name = "orrch-webui"
description = "Always-on browser UI with live xterm.js mirror of the TUI"
version.workspace = true
edition.workspace = true

[dependencies]
orrch-core = { path = "../orrch-core" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
futures-util = "0.3"
