[package]
name = "orrch-webui"
description = "Always-on browser UI with live xterm.js mirror of the TUI"
version.workspace = true
edition.workspace = true

[dependencies]
orrch-core = { path = "../orrch-core" }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
